db-cluster/users/k8s-cluster2/ns-vuthy-tourn-f464566f/mydbcluster/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mydbcluster-tcp
  namespace: ns-vuthy-tourn-f464566f
spec:
  entryPoints:
  - postgresql
  routes:
  - match: HostSNI(`mydbcluster.autonomous-istad.com`)
    services:
    - name: mydbcluster-postgresql-pooler-rw
      port: 5432
  tls:
    passthrough: true
